--- a/.env
+++ b/.env
@@ -9,7 +9,7 @@ NOTE_ICON_TITLE=false
 NOTE_ICON_FILETREE=false
 NOTE_ICON_INTERNAL_LINKS=false
 NOTE_ICON_BACK_LINKS=false
-STYLE_SETTINGS_CSS=""
+STYLE_SETTINGS_CSS="body.css-settings-manager { --anp-custom-bg-card-fg-opacity-dark: 0.4; } body.theme-light.css-settings-manager { } body.theme-dark.css-settings-manager { --ctp-custom-yellow: 239,221,14; }"
 dgHomeLink=true
 dgPassFrontmatter=false
 dgShowBacklinks=false
