--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-
+THEME=https://raw.githubusercontent.com/Bluemoondragon07/chime-theme/HEAD/theme.css
+BASE_THEME=light
 SITE_NAME_HEADER=Digital Garden
 SITE_BASE_URL=https://vocal-marigold-a2107c.netlify.app
 SHOW_CREATED_TIMESTAMP=false
